[tool.poetry]
name = "ergast-py"
version = "0.1.0"
description = "A comprehensive Python wrapper for the Ergast API. Available at: https://github.com/Samuel-Roach/ergast-py"
authors = ["Samuel Roach <samuelroach.2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
uritemplate = "^4.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
