[tool.poetry]
name = "ergast-py"
version = "1.0.0"
description = "A comprehensive Python wrapper for the Ergast API."
authors = ["Samuel Roach <samuelroach.2000@gmail.com>"]
repository = "https://github.com/Samuel-Roach/ergast-py"
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
uritemplate = "^4.1.1"
pytz = "^2022.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
reorder-python-imports = "^3.9.0"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
